@@ -1,3 +1,8 @@
+2008-02-25  Matthias Clasen  <mclasen@redhat.com>
+
+	* glib/gtestfuncs.c: Add Since: markers to docs.  (#518556, 
+	Jerry Yu)
+
 2008-02-25  Alexander Larsson  <alexl@redhat.com>
 
 	* glib/glib.symbols:
